white space bug fix

--- a/assets/styles/sections/offers-section.scss
+++ b/assets/styles/sections/offers-section.scss
@@ -1,6 +1,7 @@
 .container {
 	padding: 100px 35px;
 	width: 100%;
+	overflow: hidden;
 }
 
 .job-offers {
