--- a/main.scss
+++ b/main.scss
@@ -87,6 +87,7 @@
 		max-width: 561px;
 		border: 1px solid #fff;
 		padding: 15px 25px;
+		margin-bottom: 0;
 		position: relative;
 		cursor: pointer;
 		transition: all 0.3s ease-in-out;
@@ -168,26 +169,6 @@
 	}
 }
 
-@media (min-width: 500px) {
-	// .faq {
-	// 	&__rec {
-	// 		padding: 14px 45px;
-	// 	}
-
-	// 	&__rec.active {
-	// 		padding: 45px 45px;
-	// 	}
-
-	// 	&__toggle {
-	// 		margin-left: 45px;
-	// 	}
-
-	// 	&__question {
-	// 		font-size: 20px;
-	// 	}
-	// }
-}
-
 @media (min-width: 650px) {
 	.faq {
 		&__h2 {
@@ -216,7 +197,7 @@
 
 		&__content {
 			flex-direction: row;
-			justify-content: space-between;
+
 			align-items: start;
 			gap: 88px;
 		}
